--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 
 <head>
   <meta charset="UTF-8">
+<link rel="stylesheet" href="index.css">
   <title>Loading</title>
 </head>
 
 <body>
-  <h1>还没有构思好先这样吧</h1>
-  <div>
-    <div>
-
-    </div>
+  <div class="top-bar">
+      <div class="bar-content">
+          <span class="weblogo"></span>
+        <span>首页</span>
+        <span>文章</span>
+        <span>##</span>
+        <span>##</span>
+        <span>##</span>
+        </div>
   </div>
+
 </body>
 
 </html>
