更改了一个错误 caption标签少写了一个a

--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -139,44 +139,45 @@
         <input type="reset">
     </form>
     <hr>
-    <br>
-    <table border="1">
-        <cption value="">货品列表</cption>
-        <colgroup>
+
+    <table border="">
+        <caption>货品列表</cption>
+ 
             <col>
             <col bgcolor="red">
-        </colgroup>
-        <tr>
-            <thead>
+        <thead>
+            <tr>
                 <th>编号</th>
                 <th>品名</th>
                 <th>进价</th>
                 <th>出价</th>
-            </thead>
-        </tr>
-        <tr>
-            <td>001</td>
-            <td>苹果</td>
-            <td rowspan="2">5</td>
-            <td>8</td>
-        </tr>
-        <tr>
-            <td>001</td>
-            <td>桔子</td>
-            <td>8</td>
-        </tr>
-        <tr>
-            <td>001</td>
-            <td>香蕉</td>
-            <td>5</td>
-            <td>8</td>
-        </tr>
-        <tr>
-            <td>001</td>
-            <td>山竹</td>
-            <td>5</td>
-            <td>8</td>
-        </tr>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>001</td>
+                <td>苹果</td>
+                <td rowspan="2">5</td>
+                <td>8</td>
+            </tr>
+            <tr>
+                <td>001</td>
+                <td>桔子</td>
+                <td>8</td>
+            </tr>
+            <tr>
+                <td>001</td>
+                <td>香蕉</td>
+                <td>5</td>
+                <td>8</td>
+            </tr>
+            <tr>
+                <td>001</td>
+                <td>山竹</td>
+                <td>5</td>
+                <td>8</td>
+            </tr>
+        </tbody>
     </table>
     <hr>
     <img src="../images/bird.jpg" width="300" alt="" usemap="#birdmap">
@@ -201,4 +202,5 @@
     </div>
     <a href="" id="bottom"></a>
 </body>
+
 </html>
