昨天没弄完

--- a/miao/css-selector-practise.html
+++ b/miao/css-selector-practise.html
@@ -239,27 +239,31 @@
 
   <hr>
   <style>
+    .prime ul li{
+      color: red;
+    }
     .prime ul li:first-child {
-      color: yellow;
+      color: pink;
     }
 
-    .prime ul li:nth-child(2n){
+    .prime ul li:nth-child(2n+4){
       color: blue;
     }
-    .prime ul li:nth-child(3n){
+    .prime ul li:nth-child(3n+6){
+      color:blue;
+    }
+    .prime ul li:nth-child(4n+8){
       color: blue;
     }
-    .prime ul li:nth-child(2){
-      color: black;
+    .prime ul li:nth-child(5n+10){
+      color: blue;
     }
-    .prime ul li:nth-child(3){
-      color: black;
-    }
-    .prime ul li:nth-child(5){
-      color: black;
+    .prime ul li:nth-child(7n+7){
+      color: blue;
     }
     .prime ul li:nth-child(7){
-      color: black;
+      color: red;
+
     }
   </style>
   <div class="prime">
