--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -141,7 +141,7 @@
     <hr>
 
     <table border="">
-        <caption>货品列表</cption>
+        <caption>货品列表</caption>
  
             <col>
             <col bgcolor="red">
