--- a/miao/css-selector-practise.html
+++ b/miao/css-selector-practise.html
@@ -11,14 +11,14 @@
     body>p:first-of-type {
       color: red;
     }
+    [tabindex="-1"]:focus {
+      color: blue;
+    }
 
     [tabindex="-1"]:hover {
       color: red;
     }
 
-    [tabindex="-1"]:focus {
-      color: blue;
-    }
 
     [tabindex="-1"]:active {
       color: green;
@@ -252,19 +252,17 @@
     .prime ul li:nth-child(3n+6){
       color:blue;
     }
-    .prime ul li:nth-child(4n+8){
-      color: blue;
-    }
+
     .prime ul li:nth-child(5n+10){
       color: blue;
     }
-    .prime ul li:nth-child(7n+7){
+    .prime ul li:nth-child(7n+14){
       color: blue;
     }
-    .prime ul li:nth-child(7){
+    /* .prime ul li:nth-child(7){
       color: red;
 
-    }
+    } */
   </style>
   <div class="prime">
     <p>让所有的质/素数(prime)（2，3，5，7，11，13……）跟合数（4，6，8，9，10……）为不同的颜色</p>
