--- a/miao/css-block-layout.html
+++ b/miao/css-block-layout.html
@@ -66,6 +66,9 @@
 
             margin-top: -220px;
         }
+        .block ul li:hover{
+            background-color: red;
+        }
     </style>
     <title></title>
 </head>
