--- a/miao/ioscheckbox.html
+++ b/miao/ioscheckbox.html
@@ -19,6 +19,8 @@
     display: none;
 }
 div.check{
+    /* 代表边框间距靠左0 靠上0 和1px阴影范围 阴影颜色为黑色（#000），有inset 代表框内阴影 ，不带inset 代表框外阴影。 */
+    box-shadow:0 0 1px #000;
     width: 50px;
     height: 50px;
     background-color:rgb(255, 255, 255);
