--- a/miao/ios-checkbox.html
+++ b/miao/ios-checkbox.html
@@ -1,49 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>IOScheckbox</title>
-    
+
 </head>
+
 <body>
     <label for="ios">
-    <input type="checkbox" class="checkbox" id="ios">
-    <div class="check"></div>
-    <div class="box"></div>
-</label>
+        <input type="checkbox" class="checkbox" id="ios">
+        <div class="check"></div>
+        <div class="box"></div>
+    </label>
 </body>
 <style>
-.checkbox{
-    display: none;
-}
-div.check{
-    /* 代表边框间距靠左0 靠上0 和1px阴影范围 阴影颜色为黑色（#000），有inset 代表框内阴影 ，不带inset 代表框外阴影。 */
-    box-shadow:0 0 1px #000;
-    width: 50px;
-    height: 50px;
-    background-color:rgb(255, 255, 255);
-    border-radius: 100px;
-    position: absolute;
-    top: 13px;
-    left: 13px;
-}
-div.box{
-    width: 110px;
-    height: 60px;
-    background-color:rgb(221, 221, 221);
-    border-radius: 100px;
+    .checkbox {
+        display: none;
+    }
 
-}
-input:checked ~ div.box{
+    div.check {
+        /* 代表边框间距靠左0 靠上0 和1px阴影范围 阴影颜色为黑色（#000），有inset 代表框内阴影 ，不带inset 代表框外阴影。 */
+        box-shadow: 0 0 1px #000;
+        width: 50px;
+        height: 50px;
+        background-color: rgb(255, 255, 255);
+        border-radius: 100px;
+        position: absolute;
+        top: 13px;
+        left: 13px;
+    }
 
-    background-color:rgb(110, 221, 94);
-}
-input:checked ~ div.check{
-    position:absolute;
-    left: 65px;
-}
+    div.box {
+        width: 110px;
+        height: 60px;
+        background-color: rgb(221, 221, 221);
+        border-radius: 100px;
 
+    }
+
+    input:checked~div.box {
+
+        background-color: rgb(110, 221, 94);
+    }
+
+    input:checked~div.check {
+        position: absolute;
+        left: 65px;
+        transition: 0.7s;
+    }
+    input:not(checked)~div.check{
+        transition: 0.7s;
+    }
 </style>
+
 </html>
