--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
   <meta charset="UTF-8">
 <link rel="stylesheet" href="index.css">
+<style>
+span{
+  font: serif 24px;
+     font: serif bold 24px/1.2;
+    font: bold 24px/1.2 serif;
+}
+</style>
   <title>Loading</title>
 </head>
 
