--- a/miao/bootstarp-table.html
+++ b/miao/bootstarp-table.html
@@ -12,7 +12,12 @@
             border-collapse: collapse;
             width: 50%;
         }
-
+        .table thead tr{
+            border-bottom: 2px solid;
+        }
+        .table tbody tr{
+            border-top: 1px solid;
+        }
         .table td,
         .table th {
             text-align: center;
