--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="top.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1211186_oyml6bgbyg.css">
-    <script src="http://at.alicdn.com/t/font_1211186_oyml6bgbyg.js">
+    <link rel="stylesheet" href="viewpager-box.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1211186_8fi5gi3xu9j.css">
+    <script src="">
     </script>
     <!-- <style>
         .icon {
@@ -331,14 +332,44 @@
             </div>
         </div>
         <main>
-            <div class=""></div>
-            <aside>
-                <ul class="aside-list">
-                    
-                </ul>
-            </aside>
-            <div class="viewpager">
+            <div class="viewpager-box">
+                <aside>
+                    <ul class="aside-list">
+                        <li>
+                            <div class="aside-list-box"><a href="">手机 电话卡<i class="iconfont icon-right"></i></a></div>
+                        </li>
+                        <li>
+                            <div class="aside-list-box"><a href="">电视 盒子<i class="iconfont icon-right"></i></a></div>
+                        </li>
+                        <li>
+                            <div class="aside-list-box"><a href="">笔记本 平板<i class="iconfont icon-right"></i></a></div>
+                        </li>
+                        <li>
+                            <div class="aside-list-box"><a href="">家电 插线板<i class="iconfont icon-right"></i></a></div>
+                        </li>
+                        <li>
+                            <div class="aside-list-box"><a href="">出行 穿戴<i class="iconfont icon-right"></i></a> </div>
+                        </li>
+                        <li>
+                            <div class="aside-list-box"><a href="">智能 路由器<i class="iconfont icon-right"></i></a></div>
+                        </li>
+                        <li>
+                            <div class="aside-list-box"><a href="">电源 配件<i class="iconfont icon-right"></i></a> </div>
+                        </li>
+                        <li>
+                            <div class="aside-list-box"><a href="">健康 儿童<i class="iconfont icon-right"></i></a> </div>
+                        </li>
+                        <li>
+                            <div class="aside-list-box"><a href="">耳机 音箱<i class="iconfont icon-right"></i></a> </div>
+                        </li>
+                        <li>
+                            <div class="aside-list-box"><a href="">生活 箱包<i class="iconfont icon-right"></i></a> </div>
+                        </li>
+                    </ul>
+                </aside>
+                <div class="viewpager">
 
+                </div>
             </div>
         </main>
 </body>
