--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -8,17 +8,8 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="top.css">
     <link rel="stylesheet" href="viewpager-box.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1211186_8fi5gi3xu9j.css">
-    <script src="">
-    </script>
-    <!-- <style>
-        .icon {
-       width: 1em; height: 1em;
-       vertical-align: -0.15em;
-       fill: currentColor;
-       overflow: hidden;
-    }
-    </style> -->
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1211186_i5s1fztpvk7.css">
+    <link rel="stylesheet" href="./iconfont/iconfont.css">
     <title>小米首页</title>
 </head>
 
@@ -1189,7 +1180,27 @@
                     </ul>
                 </aside>
                 <div class="viewpager">
-
+                    <input type="radio" name="img" id="p1" checked>
+                    <label class="" for="p1"></label>
+                    <img class="p1" src="./img/p1.jpg" alt="">
+                    <input type="radio" name="img" id="p2">
+                    <label class="" for="p2"></label>
+                    <img class="p2" src="./img/p2.jpg" alt="">
+                    <input type="radio" name="img" id="p3">
+                    <label class="" for="p3"></label>
+                    <img class="p3" src="./img/p3.jpg" alt="">
+                    <input type="radio" name="img" id="p4">
+                    <label class="" for="p4"></label>
+                    <img class="p4" src="./img/p4.jpg" alt="">
+                    <input type="radio" name="img" id="p5">
+                    <label class="" for="p5"></label>
+                    <img class="p5" src="./img/p5.jpg" alt="">
+                    <div class="left"></div>
+                    <div class="right"></div>
+                    <label id="left" class="iconfont icon-icon-test-copy" for="p5"></label>
+                    <label id="right" class="iconfont icon-icon-test1-copy" for="p1"></label>
+                    <!-- <a class="left"><i style="font-size: 40px" class="iconfont icon-icon-test-copy"></i></a>
+                    <a class="right"><i style="font-size: 40px" class="iconfont icon-icon-test1-copy"></i></a> -->
                 </div>
             </div>
         </main>
