王源轮播图 完成

--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -1195,12 +1195,20 @@
                     <input type="radio" name="img" id="p5">
                     <label class="" for="p5"></label>
                     <img class="p5" src="./img/p5.jpg" alt="">
-                    <div class="left"></div>
-                    <div class="right"></div>
-                    <label id="left" class="iconfont icon-icon-test-copy" for="p5"></label>
-                    <label id="right" class="iconfont icon-icon-test1-copy" for="p1"></label>
-                    <!-- <a class="left"><i style="font-size: 40px" class="iconfont icon-icon-test-copy"></i></a>
-                    <a class="right"><i style="font-size: 40px" class="iconfont icon-icon-test1-copy"></i></a> -->
+                    <div class="" id="left">
+                        <label for="p1"><i class="iconfont icon-icon-test-copy"></i></label>
+                        <label for="p2"><i class="iconfont icon-icon-test-copy"></i></label>
+                        <label for="p3"><i class="iconfont icon-icon-test-copy"></i></label>
+                        <label for="p4"><i class="iconfont icon-icon-test-copy"></i></label>
+                        <label for="p5"><i class="iconfont icon-icon-test-copy"></i></label>
+                    </div>
+                    <div class="" id="right">
+                        <label for="p1"><i class="iconfont icon-icon-test1-copy"></i></label>
+                        <label for="p2"><i class="iconfont icon-icon-test1-copy"></i></label>
+                        <label for="p3"><i class="iconfont icon-icon-test1-copy"></i></label>
+                        <label for="p4"><i class="iconfont icon-icon-test1-copy"></i></label>
+                        <label for="p5"><i class="iconfont icon-icon-test1-copy"></i></label>
+                    </div>
                 </div>
             </div>
         </main>
