borwser-sync 有BUG？ 三个图片不显示

--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="top.css">
     <link rel="stylesheet" href="viewpager-box.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1211186_i5s1fztpvk7.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1211186_jot8zgaxv1.css">
     <link rel="stylesheet" href="./iconfont/iconfont.css">
     <title>小米首页</title>
 </head>
@@ -1210,6 +1210,20 @@
                         <label for="p5"><i class="iconfont icon-icon-test1-copy"></i></label>
                     </div>
                 </div>
+            </div>
+            <!-- 产品广告栏 -->
+            <div class="Product-adbar">
+                <div class="user-tools">
+                    <span><a><i style="font-size: 25px;" class="iconfont icon-nav3"></i><br>选购手机</a></span>
+                    <span><a><i style="font-size: 25px;" class="iconfont icon-icon-"></i><br>企业团购</a></span>
+                    <span><a><i style="font-size: 25px;" class="iconfont icon-fma"></i><br>F码通道</a></span>
+                    <span><a><i style="font-size: 25px;" class="iconfont icon-dianhuaqia"></i><br>米粉卡</a></span>
+                    <span><a><i style="font-size: 25px;" class="iconfont icon-yijiuhuanxin"></i><br>以旧换新</a></span>
+                    <span><a><i style="font-size: 25px;" class="iconfont icon-huafeichongzhi"></i><br>话费充值</a></span>
+                </div>
+                <div id="ad1"></div>
+                <div id="ad2"></div>
+                <div id="ad3"></div>
             </div>
         </main>
 </body>
