--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="top.css">
-    <link rel="stylesheet" href="viewpager-box.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1211186_jot8zgaxv1.css">
     <link rel="stylesheet" href="./iconfont/iconfont.css">
     <title>小米首页</title>
@@ -1224,6 +1224,9 @@
                 <div id="ad1"></div>
                 <div id="ad2"></div>
                 <div id="ad3"></div>
+            </div>
+            <div class="page-main">
+
             </div>
         </main>
 </body>
