布局缩放有问题 待解决

--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="top.css">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1211186_jot8zgaxv1.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1211186_balrxwv73ir.css">
     <link rel="stylesheet" href="./iconfont/iconfont.css">
     <title>小米首页</title>
 </head>
@@ -1224,11 +1224,40 @@
                 <div id="ad1"></div>
                 <div id="ad2"></div>
                 <div id="ad3"></div>
-            </div>
-            <div class="page-main">
 
             </div>
+            <div class="Banner-ad">
+                <a href="">
+                    <img src="https://i1.mifile.cn/a4/xmad_15590330241391_fkvOo.jpg" alt="">
+                </a>
+            </div>
+            <div class="page-main">
+                <div class="phone">
+                    <div class="page-title">
+                        <h2>手机</h2>
+                        <div class="more">
+                            <a href="">查看更多&nbsp;&nbsp;<i class="iconfont icon-chakangengduo"></i></a>
+                        </div>
+                    </div>
+                    <div class="phone-adbox">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div class="phone-box">
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </main>
+    </div>
 </body>
 
 </html>
