手机页广告及动画

--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -1232,16 +1232,18 @@
                 </a>
             </div>
             <div class="page-main">
-                <div class="phone">
-                    <div class="page-title">
-                        <h2>手机</h2>
-                        <div class="more">
-                            <a href="">查看更多&nbsp;&nbsp;<i class="iconfont icon-chakangengduo"></i></a>
-                        </div>
+
+                <div class="page-title">
+                    <h2>手机</h2>
+                    <div class="more">
+                        <a href="">查看更多&nbsp;&nbsp;<i class="iconfont icon-chakangengduo"></i></a>
                     </div>
+                </div>
+                <div class="phone">
                     <div class="phone-adbox">
-                        <ul>
-                            <li></li>
+                        <ul class="phone-ad">
+                            <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15578089659428_Uywcg.jpg" alt=""></a>
+                            </li>
                         </ul>
                     </div>
                     <div class="phone-box">
