手机页做完

--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -1247,13 +1247,72 @@
                         </ul>
                     </div>
                     <div class="phone-box">
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                        <ul class="phone-ul">
+                            <li>
+                                <span class="flagstate new">新品</span><br>
+                                <a><img src="https://i1.mifile.cn/a1/pms_1550642182.7527088!220x220.jpg" alt="">
+                                </a>
+                                <a>小米9 6+128GB</a>
+                                <p class="desc">骁龙855，索尼4800万超广角微距三摄</p>
+                                <p class="phone-price">2999元</p>
+                            </li>
+                            <li>
+                                <span class="flagstate new">新品</span><br>
+                                <a><img src="https://i1.mifile.cn/a1/pms_1550646283.24414368!220x220.jpg" alt="">
+                                </a>
+                                <a>小米9 SE 6+64GB</a>
+                                <p class="desc">索尼4800万超广角三摄，骁龙712</p>
+                                <p class="phone-price">1999元</p>
+                            </li>
+                            <li>
+                                <span class="flagstate new">新品</span><br>
+                                <a><img src="https://i1.mifile.cn/a1/pms_1547020852.30751177!220x220.jpg" alt="">
+                                </a>
+                                <a>Redmi Note 7 3GB+32GB</a>
+                                <p class="desc">4800万拍照千元机，18个月超长质保</p>
+                                <p class="phone-price">999元</p>
+                            </li>
+                            <li>
+                                <span class="flagstate new">新品</span><br>
+                                <a><img src="https://i1.mifile.cn/a1/pms_1545457719.47232999!220x220.png" alt="">
+                                </a>
+                                <a>小米Play 4GB+64GB</a>
+                                <p class="desc">5.84"小水滴全面屏，后置1200万 AI...</p>
+                                <p class="phone-price">1099</p>
+                            </li>
+                            <li>
+                                <span class="flagstate old">减200元</span><br>
+                                <a><img src="https://i1.mifile.cn/a1/pms_1537324004.08544830!220x220.jpg" alt="">
+                                </a>
+                                <a>小米8青春版6GB+64GB</a>
+                                <p class="desc">潮流镜面渐变色，2400万自拍旗舰</p>
+                                <p class="phone-price">1499<s style="color: #b0b0b0; margin-left: 5px;">1699</s></p>
+                            </li>
+                            <li>
+                                <span class="flagstate old">享8折</span><br>
+                                <a><img src="https://i1.mifile.cn/a1/pms_1527685277.65255600!220x220.jpg" alt="">
+                                </a>
+                                <a>小米8 SE 6GB+64GB</a>
+                                <p class="desc">三星 AMOLED 全面屏，骁龙710</p>
+                                <p class="phone-price">1499元<s style="color: #b0b0b0; margin-left: 5px;">1999</s></p>
+                            </li>
+                            <li>
+                                <span class="flagstate old">享8折</span><br>
+                                <a><img src="https://i1.mifile.cn/a1/pms_1524621350.77238418!220x220.jpg" alt="">
+                                </a>
+                                <a>小米6X 6+128GB</a>
+                                <p class="desc">轻薄美观的拍照手机</p>
+                                <p class="phone-price">1599元<s style="color: #b0b0b0; margin-left: 5px;">1999</s></p>
+                            </li>
+                            <li>
+                                <span class="flagstate old">减50元</span><br>
+                                <a><img src="https://i1.mifile.cn/a1/pms_1528719461.20891365!220x220.jpg">
+                                </a>
+                                <a>红米6A 2GB+16GB</a>
+                                <p class="desc">12nm高性能处理器,1300万高清相机</p>
+                                <p class="phone-price">549元<s style="color: #b0b0b0; margin-left: 5px;">599</s></p>
+                            </li>
+
                         </ul>
                     </div>
                 </div>
