对前面缝缝补补

--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -44,7 +44,9 @@
                 <div class="header-cart">
                     <a href=""><i class="iconfont icon-cart4"></i>
                         购物车(0)</a>
-
+                    <div class="cart-menu">
+                        <p>购物车中还没有商品，赶快选购吧！</p>
+                    </div>
                 </div>
                 <div class="header-info">
                     <a href="">登录</a>
@@ -313,10 +315,30 @@
                     </ul>
                 </div>
                 <div class="top-search">
-                    <form action="" class="search-form">
-                        <label for="search"></label>
-                        <input type="search" id="search" class="search-text">
-                        <button class="iconfont icon-chaxun" id="search-button"></button>
+                    <form action="" class="">
+                        <div class="search-form">
+                            <label for="search"></label>
+                            <input type="search" id="search" class="search-text" autocomplete="off">
+                            <button class="iconfont icon-chaxun" id="search-button"></button>
+                            <div class="search-focus">
+                                <ul>
+                                    <li><a href="">小米6X <span>约有11件</span></a></li>
+                                    <li><a href="">小米MIX 2S <span>约有11件</span></a></li>
+                                    <li><a href="">黑鲨游戏手机<span>约有11件</span></a></li>
+                                    <li><a href="">红米Note5 <span>约有11件</span></a></li>
+                                    <li><a href="">红米5A <span>约有11件</span></a></li>
+                                    <li><a href="">小米电视4C <span>约有11件</span></a></li>
+                                    <li><a href="">电视32英寸 <span>约有11件</span></a></li>
+                                    <li><a href="">笔记本pro <span>约有11件</span></a></li>
+                                    <li><a href="">空气净化器 <span>约有11件</span></a></li>
+                                    <li><a href="">净水器 <span>约有11件</span></a></li>
+                                </ul>
+                            </div>
+                            <div class="search-a">
+                                <a href="">小米9</a>
+                                <a href="">小米9 SE</a>
+                            </div>
+                        </div>
                     </form>
                 </div>
 
