代码复用性太差

--- a/index.html
+++ b/index.html
@@ -3,28 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-<link rel="stylesheet" href="index.css">
-<style>
-span{
-  font: serif 24px;
-     font: serif bold 24px/1.2;
-    font: bold 24px/1.2 serif;
-}
-</style>
+  <link rel="stylesheet" href="index.css">
+
+  <script language='javascript'>document.location = 'https://wayne18o.github.io/miao/mi/'</script>
   <title>Loading</title>
 </head>
 
 <body>
-  <div class="top-bar">
-      <div class="bar-content">
-          <span class="weblogo"></span>
-        <span>首页</span>
-        <span>文章</span>
-        <span>测试</span>
-        <span>##</span>
-        <span>##</span>
-        </div>
-  </div>
 
 </body>
 
