--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -1267,7 +1267,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="phone-box">
+                    <div class="span phone-box">
                         <ul class="phone-ul">
                             <li>
                                 <span class="flagstate new">新品</span><br>
@@ -1335,9 +1335,29 @@
                             </li>
 
                         </ul>
+
+                    </div>
+
+                </div>
+                <div class="page-ad">
+                    <a href="">
+                        <img src="https://i1.mifile.cn/a4/xmad_15595260886_oDbVR.jpg" alt="">
+                    </a>
+                </div>
+
+                <div class="page-title">
+                    <h2>家电</h2>
+                    <div class="title-kind">
+                        <ul>
+                            <li> <a href="">热门</a></li>
+                            <li> <a href="">电视影音</a></li>
+                            <li> <a href="">电脑</a></li>
+                            <li> <a href="">家居</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
+
         </main>
     </div>
 </body>
