先把test分支上传保存 解决了-3px带来的问题

--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -1263,7 +1263,7 @@
                 <div class="phone">
                     <div class="phone-adbox">
                         <ul class="phone-ad">
-                            <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15578089659428_Uywcg.jpg" alt=""></a>
+                            <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15594896289267_XZFUJ.jpg" alt=""></a>
                             </li>
                         </ul>
                     </div>
@@ -1315,7 +1315,8 @@
                                 </a>
                                 <a>小米8 SE 6GB+64GB</a>
                                 <p class="desc">三星 AMOLED 全面屏，骁龙710</p>
-                                <p class="phone-price">1499元<s style="color: #b0b0b0; margin-left: 5px;">1999</s></p>
+                                <p class="phone-price">1499元<s style="color: #b0b0b0; margin-left: 5px;">1999</s>
+                                </p>
                             </li>
                             <li>
                                 <span class="flagstate old">享8折</span><br>
@@ -1323,7 +1324,8 @@
                                 </a>
                                 <a>小米6X 6+128GB</a>
                                 <p class="desc">轻薄美观的拍照手机</p>
-                                <p class="phone-price">1599元<s style="color: #b0b0b0; margin-left: 5px;">1999</s></p>
+                                <p class="phone-price">1599元<s style="color: #b0b0b0; margin-left: 5px;">1999</s>
+                                </p>
                             </li>
                             <li>
                                 <span class="flagstate old">减50元</span><br>
@@ -1337,29 +1339,38 @@
                         </ul>
 
                     </div>
-
                 </div>
                 <div class="page-ad">
-                    <a href="">
-                        <img src="https://i1.mifile.cn/a4/xmad_15595260886_oDbVR.jpg" alt="">
-                    </a>
+                    <a href=""><img src="https://i1.mifile.cn/a4/xmad_15595260886_oDbVR.jpg" alt=""></a>
                 </div>
-
                 <div class="page-title">
+
                     <h2>家电</h2>
                     <div class="title-kind">
                         <ul>
-                            <li> <a href="">热门</a></li>
-                            <li> <a href="">电视影音</a></li>
-                            <li> <a href="">电脑</a></li>
-                            <li> <a href="">家居</a></li>
+                            <li><a>热门</a></li>
+                            <li><a>电视影音</a></li>
+                            <li><a>电脑</a></li>
+                            <li><a>家居</a></li>
                         </ul>
+                    </div>
+
+                </div>
+                <div class="page-commodity">
+                    <div class="commodity">
+                        <div class="commodity-ad">
+                            <ul>
+                                <li><a><img src="https://i1.mifile.cn/a4/xmad_15021710762698_QXnBu.jpg"></a></li>
+                                <li><a><img src="https://i1.mifile.cn/a4/xmad_15123939053142_dFlAw.jpg"></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-
         </main>
     </div>
+
+
 </body>
 
 </html>
