--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -1356,6 +1356,16 @@
                         </ul>
                     </div>
                 </div>
+                <div class="page-commodity">
+                        <div class="commodity">
+                            <div class="commodity-ad">
+                                <ul>
+                                    <li><a><img src="https://i1.mifile.cn/a4/xmad_15021710762698_QXnBu.jpg"></a></li>
+                                    <li><a><img src="https://i1.mifile.cn/a4/xmad_15123939053142_dFlAw.jpg"></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
             </div>
 
         </main>
