--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -1364,6 +1364,28 @@
                                 <li><a><img src="https://i1.mifile.cn/a4/xmad_15123939053142_dFlAw.jpg"></a></li>
                             </ul>
                         </div>
+                        <div class="commodity-span">
+                            <ul>
+                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
+                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
+                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
+                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
+                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
+                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
+                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
+                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
+                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
+                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
+                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
+                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
+                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
+                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
+                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
+                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
+                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
+                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
